--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
+    "expo-google-sign-in": "^11.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
     "nativewind": "^2.0.11",
