--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
+    "apisauce": "^2.1.6",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
     "expo-google-sign-in": "^11.0.0",
